lab6_dir/keycloak-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: keycloak-pod
  namespace: web-app
  labels:
    app: keycloak
spec:
  containers:
  - name: keycloak
    image: quay.io/keycloak/keycloak:latest
    ports:
    - containerPort: 8080
    args: ["start", "--http-enabled=true", "--hostname-strict=false"]
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: web-app
spec:
  selector:
    app: keycloak
  ports:
  - port: 80
    targetPort: 8080
